--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 "manifest_version": 3,
     "name": "Bionic reading",
-    "description": "Convert text in website to be bionic reading",
+    "description": "Convert text in website to be bionic reading.",
     "version": "1.0",
     "action": {
         "default_popup": "popup.html"
@@ -15,8 +15,7 @@
     "permissions": [
         "storage",
         "tabs",
-        "activeTab",
-        "unlimitedStorage"
+        "activeTab"
     ],
     "host_permissions": [
         "http://*/*",
